--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css" />
-
+    <!-- 
     <link
       rel="stylesheet"
       href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css"
       media="screen"
-    />
+    /> -->
 
     <link
       rel="stylesheet"
@@ -41,10 +41,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css"
+      integrity="sha512-Dop/vW3iOtayerlYAqCgkVr2aTr2ErwwTYOvRFUpzl2VhCMJyjQF0Q9TjUXIo6JhuM/3i0vVEt2e/7QQmnHQqw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Snifty - Real Estate Group HTML Template</title>
@@ -457,16 +462,16 @@
                                 <div class="button-area-advanced">
                                   <button
                                     data-toggle="collapse"
-                                    data-target="#collapseExample"
+                                    data-target="#collapseExample1"
                                     aria-expanded="false"
-                                    aria-controls="collapseExample"
+                                    aria-controls="collapseExample1"
                                     class="btn common-btn btn-block"
                                     type="button"
                                   >
                                     <i class="fa fa-sliders-h"></i>
                                     Advanced Search
                                   </button>
-                                  <div class="collapse" id="collapseExample">
+                                  <div class="collapse" id="collapseExample1">
                                     <div>
                                       <div data-role="main" class="ui-content">
                                         <form class="mt-2">
@@ -805,16 +810,16 @@
                                 <div class="button-area-advanced">
                                   <button
                                     data-toggle="collapse"
-                                    data-target="#collapseExample"
+                                    data-target="#tab2"
                                     aria-expanded="false"
-                                    aria-controls="collapseExample"
+                                    aria-controls="tab2"
                                     class="btn common-btn btn-block"
                                     type="button"
                                   >
                                     <i class="fa fa-sliders-h"></i>
                                     Advanced Search
                                   </button>
-                                  <div class="collapse" id="collapseExample">
+                                  <div class="collapse" id="tab2">
                                     <div>
                                       <div data-role="main" class="ui-content">
                                         <form class="mt-2">
@@ -1154,16 +1159,16 @@
                                 <div class="button-area-advanced">
                                   <button
                                     data-toggle="collapse"
-                                    data-target="#collapseExample"
+                                    data-target="#collapseExample2"
                                     aria-expanded="false"
-                                    aria-controls="collapseExample"
+                                    aria-controls="collapseExample2"
                                     class="btn common-btn btn-block"
                                     type="button"
                                   >
                                     <i class="fa fa-sliders-h"></i>
                                     Advanced Search
                                   </button>
-                                  <div class="collapse" id="collapseExample">
+                                  <div class="collapse" id="collapseExample2">
                                     <div>
                                       <div data-role="main" class="ui-content">
                                         <form class="mt-2">
