--- a/index.html
+++ b/index.html
@@ -223,7 +223,31 @@
                 <li class="nav-item">
                   <a href="contact.html" class="nav-link">Contact</a>
                 </li>
+                  <li class="nav-item right-nav">
+                  <a href="#" type="button" class="nav-link">Tell Me your needs</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" type="button" class="nav-link">Sales Or Rent</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link dropdown-toggle"
+                    >More <i class="bx bx-chevron-down"></i
+                  ></a>
+                  <ul class="dropdown-menu">
+                    <li class="nav-item">
+                      <a href="index.html" class="nav-link active"
+                        >Wishlist</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a href="index.html" class="nav-link active"
+                        >Option Two</a
+                      >
+                    </li>
+                  </ul>
+                </li>
               </ul>
+              </div>
             </div>
           </nav>
         </div>
