6:8:21: Updates Properties-left page

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <li class="nav-item">
                   <a href="contact.html" class="nav-link">Contact</a>
                 </li>
-                  <li class="nav-item right-nav">
+                <li class="nav-item right-nav">
                   <a href="#" type="button" class="nav-link">Tell Me your needs</a>
                 </li>
                 <li class="nav-item">
@@ -241,7 +241,7 @@
                     </li>
                     <li class="nav-item">
                       <a href="index.html" class="nav-link active"
-                        >Option Two</a
+                        >Camparison</a
                       >
                     </li>
                   </ul>
@@ -481,7 +481,7 @@
                               </button>
                             </div>
 
-                            <div class="row">
+                            <!-- <div class="row">
                               <div class="col-lg-16 mt-4">
                                 <div class="button-area-advanced">
                                   <button
@@ -589,7 +589,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
                         </div>
                       </div>
@@ -829,7 +829,7 @@
                               </button>
                             </div>
 
-                            <div class="row">
+                            <!-- <div class="row">
                               <div class="col-lg-16 mt-4">
                                 <div class="button-area-advanced">
                                   <button
@@ -937,7 +937,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
                         </div>
                       </div>
@@ -1178,7 +1178,7 @@
                               </button>
                             </div>
 
-                            <div class="row">
+                            <!-- <div class="row">
                               <div class="col-lg-16 mt-4">
                                 <div class="button-area-advanced">
                                   <button
@@ -1286,7 +1286,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                           </div>
                         </div>
                       </div>
