9/8/21 - work updates(banner section)

--- a/junk.html
+++ b/junk.html
@@ -1345,3 +1345,125 @@
         <p>The range slider can be useful for allowing users to select a specific price range when browsing products.</p>
       </form>
 </div>
+
+
+
+<!-- Advanced options -->
+                    <div class="row">
+                      <div class="col-lg-16 mt-4">
+                        <div class="button-area-advanced">
+                          <button
+                            data-toggle="collapse"
+                            data-target="#collapseExample1"
+                            aria-expanded="false"
+                            aria-controls="collapseExample1"
+                            class="btn common-btn btn-block"
+                            type="button"
+                          >
+                            <i class="fa fa-sliders-h"></i>
+                            Advanced Search
+                          </button>
+                          <div class="collapse" id="collapseExample1">
+                            <div>
+                              <div data-role="main" class="ui-content">
+                                <form class="mt-2">
+                                  <hr />
+                                  <div class="advanced-form">
+                                    <div>
+                                      <label for="price">Price</label>
+                                    </div>
+                                        <div data-role="rangeslider">
+  <label for="range-1a">Rangeslider:</label>
+  <input name="range-1a" id="range-1a" min="0" max="100" value="0" type="range" />
+  <label for="range-1b">Rangeslider:</label>
+  <input name="range-1b" id="range-1b" min="0" max="100" value="100" type="range" />
+</div>
+                                                                           
+                                    <hr />
+                                    <div class="mt-4">
+                                      <label for="area-field">Area: </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                      <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        id="inlineCheckbox1"
+                                        value="option1"
+                                      />
+                                      <label
+                                        class="form-check-label"
+                                        for="inlineCheckbox1"
+                                        >1 Option</label
+                                      >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                      <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        id="inlineCheckbox1"
+                                        value="option1"
+                                      />
+                                      <label
+                                        class="form-check-label"
+                                        for="inlineCheckbox1"
+                                        >2 Option</label
+                                      >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                      <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        id="inlineCheckbox1"
+                                        value="option1"
+                                      />
+                                      <label
+                                        class="form-check-label"
+                                        for="inlineCheckbox1"
+                                        >3 Option</label
+                                      >
+                                    </div>
+
+<!-- 
+                                                                        <hr />
+                                    <div class="mt-4">
+                                      <label for="area-field">Amenities: </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                      <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        id="inlineCheckbox1"
+                                        value="option1"
+                                      />
+                                      <label
+                                        class="form-check-label"
+                                        for="inlineCheckbox1"
+                                        >1 Option</label
+                                      >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                      <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        id="inlineCheckbox1"
+                                        value="option1"
+                                      />
+                                      <label
+                                        class="form-check-label"
+                                        for="inlineCheckbox1"
+                                        >2 Option</label
+                                      >
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                      <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        id="inlineCheckbox1"
+                                        value="option1"
+                                      />
+                                      <label
+                                        class="form-check-label"
+                                        for="inlineCheckbox1"
+                                        >3 Option</label
+                                      >
+                                    </div> -->
