work 9/8/21 -fix update

--- a/index.html
+++ b/index.html
@@ -420,21 +420,40 @@
                               <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
                         <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
+                            Residential
                         </label>
                     </div>
                             </li>
                             <li><div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
                         <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
+                           Commercial
                         </label>
                     </div></li>
-                            <li class="dropdown-submenu">
+                            <li><div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                        <label class="form-check-label" for="flexCheckIndeterminate">
+                           Industrial
+                        </label>
+                    </div></li>
+                            <li><div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                        <label class="form-check-label" for="flexCheckIndeterminate">
+                           Institutional
+                        </label>
+                    </div></li>
+                            <li><div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                        <label class="form-check-label" for="flexCheckIndeterminate">
+                           Agricultural
+                        </label>
+                    </div></li>
+
+                            <!-- <li class="dropdown-submenu">
                               <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
                         <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
+                            Industrial
                         </label>
                     </div>
                               <ul class="dropdown-menu">
@@ -481,7 +500,7 @@
                                   </ul>
                                 </li>
                               </ul>
-                            </li>
+                            </li> -->
                           </ul>
                         </div>
                       </div>
@@ -698,7 +717,7 @@
                               <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
                         <label class="form-check-label" for="flexCheckIndeterminate">
-                            Option One
+                            24/7 power backup
                         </label>
                     </div>
                             </li>
@@ -706,11 +725,27 @@
                               <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
                         <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
+                            24/7 water supply
                         </label>
                     </div>
                             </li>
-                            <li class="dropdown-submenu">
+                            <li>
+                              <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                        <label class="form-check-label" for="flexCheckIndeterminate">
+                            24x7 security
+                        </label>
+                    </div>
+                            </li>
+                            <li>
+                              <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                        <label class="form-check-label" for="flexCheckIndeterminate">
+                          ATM
+                        </label>
+                    </div>
+                            </li>
+                            <!-- <li class="dropdown-submenu">
                               <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
                         <label class="form-check-label" for="flexCheckIndeterminate">
@@ -761,7 +796,7 @@
                                   </ul>
                                 </li>
                               </ul>
-                            </li>
+                            </li> -->
                           </ul>
                         </div>
                   </div>
