--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <!-- Banner -->
    <div class="banner-area">
     <div class="container">
-      <div class="banner-content">
+      <div class="banner-content mt-6">
           <h1 class="banner-content-heading">Home Is The Starting Place Of Love, Hope And Dreams</h1>
 
           <div class="tab slides-category-list-tab">
@@ -618,10 +618,10 @@
                           </div>
                         </div>
               <div class="advanced-option">
-                <div>
+                <div class="row">
 
 
-                  <div class="col-lg-3">
+                  <div class="col-lg-3 mt-3">
                         <div class="dropdown">
                           <button
                             class="btn btn-default dropdown-toggle"
@@ -703,7 +703,7 @@
                         </div>
                   </div>
 
-                  <div class="col-lg-3">
+                  <div class="col-lg-3 mt-3">
                         <div class="dropdown">
                           <button
                             class="btn btn-default dropdown-toggle"
@@ -801,7 +801,7 @@
                         </div>
                   </div>
 
-                  <div class="col-lg-3 mt-3">
+                  <div class="col-lg-3 mt-3 mb-5">
                     <button class="btn btn-default price-btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                       Price
                       <span class="text-pager"></span>
