--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
                       <div class="col-lg-3">
                         <div class="dropdown">
                           <button
-                            class="btn btn-default dropdown-toggle"
+                            class="btn d-inline-flex align-items-center justify-content-between px-2 btn-default dropdown-toggle"
                             type="button"
                             data-toggle="dropdown"
                           >
-                            <a class="dropdown-text">Purpose</a>
+                            <a>Purpose</a>
                           </button>
                           <ul class="dropdown-menu">
                             <li>
@@ -407,12 +407,11 @@
                       <div class="col-lg-3">
                         <div class="dropdown">
                           <button
-                            class="btn btn-default dropdown-toggle"
+                            class="btn d-inline-flex align-items-center justify-content-between px-2 btn-default dropdown-toggle"
                             type="button"
                             data-toggle="dropdown"
                           >
-                            <a class="dropdown-text dropdown-text-lg"
-                              >Property Type</a
+                            <a>Property Type</a
                             >
                           </button>
                           <ul class="dropdown-menu">
@@ -508,11 +507,11 @@
                       <div class="col-lg-3">
                         <div class="dropdown">
                           <button
-                            class="btn btn-default dropdown-toggle"
+                            class="btn d-inline-flex align-items-center justify-content-between px-2 btn-default dropdown-toggle"
                             type="button"
                             data-toggle="dropdown"
                           >
-                            <a class="dropdown-text">Location</a>
+                            <a>Location</a>
                           </button>
                           <ul class="dropdown-menu">
                             <li>
@@ -585,7 +584,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="button-area">
+                    <div class="button-area mt-3">
                       <button type="submit" class="btn common-btn">
                         <i class="flaticon-search-1"></i>
                         Search
@@ -599,11 +598,11 @@
                             <input type="range" class="form-range" id="customRange1"> -->
 
 
-                            <div class="price-slider"><span>from
-                              <input type="number" value="5000" min="0" max="120000"/>	to
+                            <div class="price-slider"><span>Min
+                              <input type="number" value="5000" min="0" max="120000"/>	Max
                               <input type="number" value="50000" min="0" max="120000"/></span>
                               <input value="25000" min="0" max="120000" step="500" type="range"/>
-                              <input value="50000" min="0" max="120000" step="500" type="range"/>
+                              <input value="50000" min="0" max="1200000" step="500" type="range"/>
                             </div>
 
 
@@ -614,21 +613,21 @@
                   </div>
                 </form>
               </div>
-                            </div>
+            </div>
                           </div>
                         </div>
               <div class="advanced-option">
-                <div class="row">
+                <div class="row d-flexalign-items-center">
 
 
-                  <div class="col-lg-3 mt-3">
+                  <div class="col-lg-3">
                         <div class="dropdown">
                           <button
-                            class="btn btn-default dropdown-toggle"
+                            class="d-inline-flex align-items-center justify-content-between px-5 p-4 btn btn-default dropdown-toggle"
                             type="button"
                             data-toggle="dropdown"
                           >
-                            <a class="dropdown-text">Area</a>
+                            <a>Area</a>
                           </button>
                           <ul class="dropdown-menu">
                             <li>
@@ -703,14 +702,14 @@
                         </div>
                   </div>
 
-                  <div class="col-lg-3 mt-3">
+                  <div class="col-lg-3">
                         <div class="dropdown">
                           <button
-                            class="btn btn-default dropdown-toggle"
+                            class="d-inline-flex align-items-center justify-content-between px-5 p-4 btn btn-default dropdown-toggle"
                             type="button"
                             data-toggle="dropdown"
                           >
-                            <a class="dropdown-text">Amenities</a>
+                            <a>Amenities</a>
                           </button>
                           <ul class="dropdown-menu">
                             <li>
@@ -801,8 +800,8 @@
                         </div>
                   </div>
 
-                  <div class="col-lg-3 mt-3 mb-5">
-                    <button class="btn btn-default price-btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                  <div class="col-lg-3 mt-3">
+                    <button class="btn p-4 btn-default price-btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                       Price
                       <span class="text-pager"></span>
                     </button>
