--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
    <div class="banner-area">
     <div class="container">
       <div class="banner-content mt-6">
-          <h1 class="banner-content-heading">Home Is The Starting Place Of Love, Hope And Dreams</h1>
+          <h1 class="banner-content-heading">Find Your Dream Property</h1>
 
           <div class="tab slides-category-list-tab">
             <form>
@@ -277,7 +277,7 @@
                 </li>
               </ul>
 
-              <div class="tab-option">
+              <!-- <div class="tab-option">
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                   <label class="form-check-label white" for="inlineCheckbox1">
@@ -302,13 +302,13 @@
                     Ready To Move
                   </label>
                 </div>
-              </div>
+              </div> -->
 
               <div class="tab_content">
                 <div class="tabs_item">
                   <div class="banner-form-area">
                     <div class="row">
-                      <div class="col-lg-3">
+                      <div class="col-lg-6">
                         <div class="form-group">
                           <label>
                             <i class="bx bxs-paper-plane"></i>
@@ -331,30 +331,43 @@
                           >
                             <a>Purpose</a>
                           </button>
-                          <ul class="dropdown-menu">
+                          <ul class="dropdown-menu purpose-optionList">
                             <li>
                               <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            Option One
-                        </label>
-                    </div>
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                                  <label class="form-check-label" for="flexCheckIndeterminate">
+                                      New Booking
+                                      <br>
+                                      <span>(New Launch)</span>
+                                  </label>
+                              </div>
                             </li>
                             <li>
                               <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                                  <label class="form-check-label" for="flexCheckIndeterminate">
+                                      Pre-Booking
+                                      <br>
+                                      <span>(Under Construction)</span> 
+                                  </label>
+                              </div>
                             </li>
-                            <li class="dropdown-submenu">
+                            
+                            <li>
                               <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two <span class="caret"></span>
-                        </label>
-                    </div>
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                                  <label class="form-check-label" for="flexCheckIndeterminate">
+                                      Ready To move
+                                  </label>
+                              </div>
+                            </li>
+                            <!-- <li class="dropdown-submenu">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
+                                <label class="form-check-label" for="flexCheckIndeterminate">
+                                    OPtion two <span class="caret"></span>
+                                </label>
+                               </div>
                               <ul class="dropdown-menu">
                                 <li>
                                   <div class="form-check">
@@ -399,7 +412,7 @@
                                   </ul>
                                 </li>
                               </ul>
-                            </li>
+                            </li> -->
                           </ul>
                         </div>
                       </div>
@@ -504,85 +517,6 @@
                         </div>
                       </div>
 
-                      <div class="col-lg-3">
-                        <div class="dropdown">
-                          <button
-                            class="btn d-inline-flex align-items-center justify-content-between px-2 btn-default dropdown-toggle"
-                            type="button"
-                            data-toggle="dropdown"
-                          >
-                            <a>Location</a>
-                          </button>
-                          <ul class="dropdown-menu">
-                            <li>
-                              <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
-                            </li>
-                            <li><div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div></li>
-                            <li class="dropdown-submenu">
-                              <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
-                              <ul class="dropdown-menu">
-                                <li>
-                                  <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
-                                </li>
-                                <li>
-                                  <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
-                                </li>
-                                <li class="dropdown-submenu">
-                                  <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
-                                  <ul class="dropdown-menu">
-                                    <li>
-                                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
-                                    </li>
-                                    <li>
-                                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate">
-                        <label class="form-check-label" for="flexCheckIndeterminate">
-                            OPtion two
-                        </label>
-                    </div>
-                                    </li>
-                                  </ul>
-                                </li>
-                              </ul>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
                     </div>
                     <div class="button-area mt-3">
                       <button type="submit" class="btn common-btn">
@@ -2002,9 +1936,8 @@
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/Site.js"></script>
     <!-- google autocomplete place api integration -->
-    <script
-      async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzUoJf3-d6ufuLkNxrZ09T_wXbhm0Dl9Y&libraries=places&callback=initMap"
-    ></script>
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzUoJf3-d6ufuLkNxrZ09T_wXbhm0Dl9Y&libraries=places&callback=initMap">
+    </script>
   </body>
 </html>
